fix: the content in the chunk card will overflow #1628 (#1629)
### What problem does this PR solve?
fix: the content in the chunk card will overflow #1628
### Type of change

- [x] Bug Fix (non-breaking change which fixes an issue)

--- a/web/src/pages/add-knowledge/components/knowledge-chunk/components/chunk-card/index.less
+++ b/web/src/pages/add-knowledge/components/knowledge-chunk/components/chunk-card/index.less
@@ -17,6 +17,9 @@
 .contentEllipsis {
   .multipleLineEllipsis(3);
 }
+.contentText {
+  word-break: break-all;
+}
 
 .chunkCard {
   width: 100%;
